--- a/frontend/app/components/molecules/DownPaymentInput.css
+++ b/frontend/app/components/molecules/DownPaymentInput.css
@@ -1,23 +1,37 @@
 @import "../../styles/constants.css";
 
 .down-payment-input {
+  display: flex;
+  align-items: center;
   margin-bottom: var(--spacing-margin);
+  width: 100%;
 }
 
 .title {
-  text-align: center;
-  margin-bottom: var(--spacing-smallMargin);
+  text-align: left;
+  margin-right: var(--spacing-smallMargin);
   font-size: var(--fonts-large);
 }
 
 .input {
-  width: 100%;
+  flex: 1;
   padding: var(--spacing-smallPadding);
   font-size: var(--fonts-medium);
 }
 
 @media (max-width: var(--breakpoints-tablet)) {
+  .down-payment-input {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .title {
+    text-align: center;
+    margin-right: 0;
+  }
+
   .input {
+    width: 100%;
     padding: var(--spacing-smallPadding);
     font-size: var(--fonts-small);
   }
