--- a/frontend/app/components/organisms/FinanceSimulationForm.css
+++ b/frontend/app/components/organisms/FinanceSimulationForm.css
@@ -21,7 +21,14 @@
   margin-left: var(--spacing-smallMargin);
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
+  .finance-simulation-form {
+    width: 100%;
+    padding: var(--spacing-smallPadding);
+    margin-bottom: var(--spacing-smallMargin);
+    align-items: center;
+  }
+
   .input-button-group {
     flex-direction: column;
     align-items: center;
