--- a/frontend/app/styles/constants.css
+++ b/frontend/app/styles/constants.css
@@ -13,6 +13,8 @@
   --fonts-small: 0.875rem;
   
   --colors-primary: #7e57c2;
+  --colors-black: #000000;
+  --colors-gray: #7C7C7C;
   --colors-buttonBackground: #7e57c2;
   --colors-buttonText: #fff;
 
