--- a/frontend/app/components/molecules/DownPaymentInput.css
+++ b/frontend/app/components/molecules/DownPaymentInput.css
@@ -1,8 +1,6 @@
 @import "../../styles/constants.css";
 
 .down-payment-input {
-  /* display: flex; */
-  /* align-items: center; */
   margin-bottom: var(--spacing-margin);
   width: 100%;
 }
@@ -17,16 +15,18 @@
   flex: 1;
   padding: var(--spacing-smallPadding);
   font-size: var(--fonts-medium);
+  margin-left: var(--spacing-margin);
 }
 
 @media (max-width: var(--breakpoints-tablet)) {
   .down-payment-input {
+    display: flex;
     flex-direction: column;
     align-items: center;
   }
 
   .title {
-    text-align: left;
+    align-self: flex-start;
     margin-right: 0;
   }
 
