--- a/frontend/app/components/organisms/SimulatedValuesPanel.css
+++ b/frontend/app/components/organisms/SimulatedValuesPanel.css
@@ -5,8 +5,6 @@
   flex-direction: column;
   align-items: flex-start;
   padding: var(--spacing-padding);
-  border: 1px solid #ddd;
-  border-radius: var(--borderRadius-small);
   background-color: #FAFAFA;
   width: 100%;
 }
@@ -14,17 +12,15 @@
 .title {
   text-align: left;
   margin-bottom: var(--spacing-margin);
-  font-size: var(--fonts-large);
-  color: var(--colors-primary);
-  border-bottom: 3px solid var(--colors-primary);
-  padding-bottom: var(--spacing-smallMargin);
+  font-size: var(--fonts-medium);
+  color: var(--colors-black);
 }
 
 .installments-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: var(--spacing-smallMargin);
-  width: 100%;
+  width: 50%;
 }
 
 .installment-card {
@@ -45,12 +41,15 @@
 }
 
 .installment-label {
+  align-self: flex-start;
   font-size: var(--fonts-medium);
-  color: var(--colors-primary);
+  color: var(--colors-black);
 }
 
 .installment-value {
+  align-self: flex-start;
   font-size: var(--fonts-large);
+  font-weight: 700;
   color: var(--colors-primary);
 }
 
@@ -66,7 +65,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
+  width: 50%;
   margin-top: var(--spacing-margin);
 }
 
@@ -77,6 +76,7 @@
   text-decoration: none;
   border-radius: 20px;
   display: flex;
+  font-weight: 600;
   align-items: center;
   justify-content: center;
   width: 66%;
@@ -91,6 +91,7 @@
   width: 33%;
   text-align: right;
   color: #000;
+  font-weight: 600;
 }
 
 @media (max-width: 768px) {
@@ -101,13 +102,14 @@
   }
 
   .title {
-    text-align: center;
+    text-align: left;
   }
 
   .installments-container {
     display: flex;
     flex-direction: column;
     gap: var(--spacing-smallMargin);
+    width: 100%;
   }
 
   .installment-card.highlight {
@@ -117,6 +119,7 @@
   .action-container {
     flex-direction: column;
     align-items: center;
+    width: 100%;
   }
 
   .whatsapp-button,
@@ -124,6 +127,7 @@
     width: 100%;
     text-align: center;
     margin-bottom: var(--spacing-smallMargin);
+    margin-top: var(--spacing-smallMargin);
   }
 
   .whatsapp-button {
