--- a/frontend/app/styles/constants.css
+++ b/frontend/app/styles/constants.css
@@ -1,6 +1,7 @@
 :root {
   --spacing-padding: 20px;
   --spacing-smallPadding: 10px;
+  --spacing-largePadding: 60px;
   --spacing-extraSmallPadding: 5px;
   --spacing-margin: 20px;
   --spacing-smallMargin: 10px;
@@ -15,6 +16,7 @@
   --colors-primary: #7e57c2;
   --colors-black: #000000;
   --colors-gray: #7C7C7C;
+  --colors-white: #ffffff;
   --colors-buttonBackground: #7e57c2;
   --colors-buttonText: #fff;
 
