--- a/frontend/app/components/organisms/Header.css
+++ b/frontend/app/components/organisms/Header.css
@@ -1,13 +1,18 @@
 .header {
-    background-color: #4a4a4a;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
+  background-color: #7d28f7;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  .header {
+    padding: 8px 0;
   }
-  
-  @media (max-width: 768px) {
-    .header {
-      padding: 8px 0;
-    }
-  }
-  
+}
