--- a/frontend/app/styles/constants.css
+++ b/frontend/app/styles/constants.css
@@ -13,13 +13,12 @@
   --fonts-medium: 1rem;
   --fonts-small: 0.875rem;
   
-  --colors-primary: #7e57c2;
+  --colors-primary: #7D28F7;
   --colors-black: #000000;
   --colors-gray: #7C7C7C;
   --colors-white: #ffffff;
   --colors-buttonBackground: #7e57c2;
   --colors-buttonText: #fff;
 
-  --breakpoints-mobile: 630px;
   --breakpoints-tablet: 768px;
 }
